refactored scss code through scsslint

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,7 +6,7 @@
 /* HTML & Body
 --------------------------------------------------*/
 
-*{
+* {
   @include border-box;
   margin: 0;
   padding: 0;
@@ -34,10 +34,22 @@ body {
 }
 
 
-h1,h2,h3,h4,h5,h6,hgroup,
-ul,ol,dd,
-p,figure,
-pre,table,fieldset,hr {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hgroup,
+ul,
+ol,
+dd,
+p,
+figure,
+pre,
+table,
+fieldset,
+hr {
   margin-bottom: $spacing;
 }
 
