--- a/sass/helpers/_render-gradients.scss
+++ b/sass/helpers/_render-gradients.scss
@@ -9,16 +9,14 @@
       $pre-spec: nth($gradient-positions, 1);
       $spec:     nth($gradient-positions, 2);
     }
-  }
-  @else if $gradient-type == radial {
+  } @else if $gradient-type == radial {
     $pre-spec: nth($gradient-positions, 1);
     $spec:     nth($gradient-positions, 2);
   }
 
   @if $vendor {
     $vendor-gradients: -#{$vendor}-#{$gradient-type}-gradient(#{$pre-spec} $gradients);
-  }
-  @else if $vendor == false {
+  } @else if $vendor == false {
     $vendor-gradients: "#{$gradient-type}-gradient(#{$spec} #{$gradients})";
     $vendor-gradients: unquote($vendor-gradients);
   }
