--- a/sass/modules/_links.scss
+++ b/sass/modules/_links.scss
@@ -7,10 +7,12 @@ a {
   color: $black-70;
   text-decoration: none;
   outline: 0;
+
   &:visited {
     color: $black-70;
     text-decoration: underline;
     outline: 0;
   }
-  @include hoverActiveFocus(color, $link-color-hover);
+
+  @include hoveractivefocus(color, $link-color-hover);
 }
