--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -80,48 +80,78 @@
 
 @mixin breakpoint($point, $value: 0) {
   @if $point == xlarge {
-    @media (min-width: em(1392)) { @content; }
+    @media (min-width: em(1392)) { 
+      @content; 
+    }
+
   } @else if $point == large {
-      @media (min-width: em(1030)) { @content; }
+    @media (min-width: em(1030)) { 
+      @content; 
+    }
+
   } @else if $point == medium {
-      @media (min-width: em(888)) { @content; }
+    @media (min-width: em(888)) { 
+      @content; 
+    }
   } @else if $point == small {
-      @media (min-width: em(600))  { @content; }
+    @media (min-width: em(600))  { 
+      @content; 
+    }
   } @else if $point == xsmall {
-      @media (min-width: em(480))  { @content; }
+    @media (min-width: em(480))  { 
+      @content; 
+    }
   } @else if $point == retina {
-      @media only screen and (-webkit-min-device-pixel-ratio : 1.5),
-	  only screen and (min-device-pixel-ratio : 1.5)  { @content; }
+    @media only screen and (-webkit-min-device-pixel-ratio : 1.5),
+    only screen and (min-device-pixel-ratio : 1.5)  { 
+      @content; 
+    }
   } @else if $point == xlarge-retina {
-      @media (min-width: em(1392)) and (-webkit-min-device-pixel-ratio : 1.5),
-	  only screen and (min-device-pixel-ratio : 1.5) { @content; }
+    @media (min-width: em(1392)) and (-webkit-min-device-pixel-ratio : 1.5),
+    only screen and (min-device-pixel-ratio : 1.5) { 
+      @content; 
+    }
   } @else if $point == large-retina {
-      @media (min-width: em(1030)) and (-webkit-min-device-pixel-ratio : 1.5),
-	  only screen and (min-device-pixel-ratio : 1.5) { @content; }
+    @media (min-width: em(1030)) and (-webkit-min-device-pixel-ratio : 1.5),
+    only screen and (min-device-pixel-ratio : 1.5) { 
+      @content; 
+    }
   } @else if $point == medium-retina {
-      @media (min-width: em(888)) and (-webkit-min-device-pixel-ratio : 1.5),
-	  only screen and (min-device-pixel-ratio : 1.5) { @content; }
+    @media (min-width: em(888)) and (-webkit-min-device-pixel-ratio : 1.5),
+    only screen and (min-device-pixel-ratio : 1.5) { 
+      @content; 
+    }
   } @else if $point == small-retina {
-      @media (min-width: em(600)) and (-webkit-min-device-pixel-ratio : 1.5),
-	  only screen and (min-device-pixel-ratio : 1.5) { @content; }
+    @media (min-width: em(600)) and (-webkit-min-device-pixel-ratio : 1.5),
+    only screen and (min-device-pixel-ratio : 1.5) { 
+      @content; 
+    }
   } @else if $point == xsmall-retina {
-      @media (min-width: em(480)) and (-webkit-min-device-pixel-ratio : 1.5),
-	  only screen and (min-device-pixel-ratio : 1.5) { @content; }
+    @media (min-width: em(480)) and (-webkit-min-device-pixel-ratio : 1.5),
+    only screen and (min-device-pixel-ratio : 1.5) { 
+      @content; 
+    }
   } @else if $point == hdpi($ratio: 1.3) {
-      @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
-      only screen and (min--moz-device-pixel-ratio: $ratio),
-      only screen and (-o-min-device-pixel-ratio: #{$ratio}/1),
-      only screen and (min-resolution: #{round($ratio*96)}dpi),
-      only screen and (min-resolution: #{$ratio}dppx) { @content; }
+    @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
+    only screen and (min--moz-device-pixel-ratio: $ratio),
+    only screen and (-o-min-device-pixel-ratio: #{$ratio}/1),
+    only screen and (min-resolution: #{round($ratio*96)}dpi),
+    only screen and (min-resolution: #{$ratio}dppx) { 
+      @content; 
+    }
   } @else {
-  	  @media ($point: $value) { @content; }
+    @media ($point: $value) { 
+      @content; 
+    }
   }
 }
 
 @mixin between-breakpoints($min, $max) {
-	@media (min-width: $min) and (max-width: $max) {
-		@content;
-	}
+
+  @media (min-width: $min) and (max-width: $max) {
+    @content;
+  }
+
 }
 
 /* Retina Displays 
