Fix include for breadcrumbs partial

--- a/sass/wirefy.scss
+++ b/sass/wirefy.scss
@@ -42,7 +42,7 @@ MIT License
 
 @import 'modules/_animations.scss';
 @import 'modules/_transitions.scss';
-@import 'modules/_breadcrumbs.css';
+@import 'modules/_breadcrumbs.scss';
 @import 'modules/_buttons.scss';
 @import 'modules/_blockquotes.scss';
 @import 'modules/_lists.scss';
