--- a/sass/wirefy.scss
+++ b/sass/wirefy.scss
@@ -1,7 +1,7 @@
 /* ============================================================
 
 Wirefy by Chris Da Sie
-Version: 3.0.4
+Version: 3.0.5
 URL: https://github.com/cjdsie/wirefy
 Text Domain: Wirefy
 MIT License
@@ -22,7 +22,8 @@ MIT License
 @import 'base/_base.scss';
 
 
-/* FRAMEWORK - Structure & layout files including the grid function. ========================================================================== */
+/* FRAMEWORK - Structure & layout files including the grid function. 
+========================================================================== */
 
 @import 'framework/_grid.scss';
 @import 'framework/_typography.scss';
