--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,3 +1,17 @@
 <div class="callout ads">
-  	<script type="text/javascript" src="http://cdn.adpacks.com/adpacks.js?legacyid=1277196&zoneid=1409&key=991a376ef1e7767477b39694cfa817c9&serve=C6SIVKE&placement=getwirefycom&circle=ux" id="_adpacks_js"></script>
+	<!-- BuySellAds Zone Code -->
+	<div id="bsap_1277196" class="bsarocks bsap_991a376ef1e7767477b39694cfa817c9"></div>
+	<!-- End BuySellAds Zone Code -->
 </div>
+
+<!-- BuySellAds Ad Code -->
+<script type="text/javascript">
+(function(){
+  var bsa = document.createElement('script');
+     bsa.type = 'text/javascript';
+     bsa.async = true;
+     bsa.src = '//s3.buysellads.com/ac/bsa.js';
+  (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(bsa);
+})();
+</script>
+<!-- End BuySellAds Ad Code -->
