moved ad script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 {% include html-header.html %}
 <body>
+	{% include ad_script.html %}
     {% include main-navigation.html %}
 	<main class="main">
 		<div class="wrapper">
