--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,6 @@
 	<!--End mc_embed_signup-->
 <footer role="contentinfo">
 	<div class="container">
-		<p><small>Copyright &#169; 2014 <a href="http://chrisdasie.com">Chris Da Sie</a>. Code covered by the <a rel="license" href="http://chrisdasie.mit-license.org/">MIT license</a>. Hosted by <a href="https://github.com/cjdsie/wirefy">GitHub</a>.</small></p>
+		<p><small>Copyright &#169; 2014 - 2018 <a href="http://chrisdasie.com">Chris Da Sie</a>. Code covered by the <a rel="license" href="http://chrisdasie.mit-license.org/">MIT license</a>. Hosted by <a href="https://github.com/cjdsie/wirefy">GitHub</a>.</small></p>
 	</div>
 </footer><!--/@contentinfo-->
